<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">CartonBox</string>
	<string name="googleplay">View in Store</string>
	<string name="news">News</string>
	<string name="privacy">Privacy policy</string>
	
	<string name="login_details">Login details</string>
	<string name="login_message">Certain booru boards require registration for outside use.</string>
	
	<string name="username">Username</string>
	<string name="password">Password</string>
	
	<string name="notempty">This field can not be empty!</string>
	<string name="enteravalidurl">You should enter a valid url</string>
	<string name="enterusername">Enter your username</string>
	<string name="enterpassword">Enter your password</string>
	<string name="help">Help</string>
	<string name="icons">Sample icons</string>
	
	<string name="help_msg">"This dialog helps you add custom sites, put a name and the url of the booru site (gelbooru sites don\'t work at the moment).

You also need to specify the type of booru board you are going to add; currently *.donmai.us boorus are of the Danbooru 2.x type, other boorus (except for gelbooru, safebooru and the boorus at booru.org, which all are gelbooru) should be of the danbooru 1.18.x type (some examples: behoimi, one yukkuri place, yande.re, konachan, although yande.re definitely will not work).

You will also need to provide your own display icons, images at 512 x 512 px should look fine."</string>
	
	<string name="nosites">You don\'t have sites added.</string>
	
	<string name="notbooru">This is either not a supported booru site, not a booru site at all, or a bad configured booru site, did you change the type of board when adding this site?</string>
	<string name="configureit">This site\'s type is not configured correctly, go back and change that.</string>
	
	<string name="settings">Settings</string>
	<string name="search">Search</string>
	<string name="reset">Reset search</string>
	<string name="refresh">Refresh</string>
	<string name="addsite">Add site</string>
	<string name="favorite">Favorite</string>
	<string name="defaults">Defaults</string>
	<string name="custom">Custom</string>
	
	<string name="addsite">Add a site</string>
	<string name="edit">Edit</string>
	<string name="remove">Remove</string>
	<string name="surewanttoremove">Are you sure you want to remove this site?</string>
	<string name="incompatiblefilesource">Incompatible file source</string>
	
	<string name="save">Save</string>
	<string name="browser">Open in browser</string>
	<string name="details">Details</string>
	<string name="viewparent">Parent post</string>
	<string name="viewchildren">Child posts</string>
	<string name="viewpools">Pools containig this post</string>
	
	<string name="searchtags">Search tags</string>
	<string name="searchposts">Search posts</string>
	<string name="searchpools">Search pools</string>
	<string name="searchartists">Search artists</string>
	<string name="searchstuff">Search stuff</string>
	
	<string name="ratingdialogtitle">Give rating!</string>
	<string name="ratingdialogmessage">You have been using this app for some time, would you like to give a rating?</string>
	<string name="later">Later</string>
	
	<string name="notavailable">Not available yet</string>
	<string name="noshowagain">Don\'t Show again</string>
	
	<string name="sitename">Name</string>
	<string name="sitetype">Site type</string>
	<string name="siteaddress">http://</string>
	
	<string name="siteauthdetails">Provide login details</string>
	
	<string name="sitedanbooru2">Danbooru 2.x</string>
	<string name="sitedanbooru1">Danbooru 1.18.x</string>
	<string name="sitegelbooru">Gelbooru 0.2.x</string>
	<string name="sitecustomize">Customize</string>
	
	<string name="no_posts">No posts!</string>
	<string name="no_tags">No tags!</string>
	
	<string name="downloads">See downloads</string>
	<string name="downloading">Downloading&#8230;</string>
	<string name="already_downloaded">Already downloaded</string>
	<string name="loading">Loading&#8230;</string>
	<string name="loading_sample">Downloading sample&#8230;</string>
	<string name="loading_preview">Downloading preview&#8230;</string>
	<string name="download_failed">Download failed</string>
	<string name="download_started">Download Started</string>
	<string name="download_complete">Download Complete</string>
	<string name="couldnotblog">Couldn\'t connect to blog</string>
	<string name="trylater">Don\'t worry, try again later</string>
	<string name="postblocked">Post blocked\ntap to download manually</string>
	
	<string name="empty">This part is not available yet&#8230; but it will be! I hope.\n\nRead this while I actually work on the rest.</string>
	
	<string name="pref_header_general">General settings</string>
	<string name="pref_header_content">Customize content</string>
	<string name="pref_header_blacklist">Set blacklists</string>
	<string name="pref_header_ratings">Display ratings</string>
	
	<string name="pref_header_summary_general">General settings</string>
	<string name="pref_header_summary_content">Customize content</string>
	<string name="pref_header_summary_blacklist">Set blacklists</string>
	<string name="pref_header_summary_ratings">Display ratings</string>
	
	<string name="pref_sites">Sites</string>
	
	<string name="pref_general">General</string>
	<string name="pref_general_download_folder">Download folder</string>
	<string name="pref_general_download_folder_dialogmsg">Downloaded images will be located in this directory.</string>
	<string name="pref_general_cacheexternal">Cache to SD/External</string>
	<string name="pref_general_cachesize">Maximum cache size</string>
	<string name="pref_general_cachesize_desc">Current is %s</string>
	<string name="pref_general_clearcache">Clear cache</string>
	<string name="pref_general_clearcache_desc">Cache uses %s</string>
	<string name="pref_general_clearcache_desc_empty">Cache is empty</string>
	<string name="pref_general_clearcache_calc">Calculating&#8230;</string>
	<string name="pref_general_clearcacheonexit">Clear cache on exit</string>
	<string name="pref_general_clearcacheonexit_clearing">Clearing cache&#8230;</string>
	
	<string name="pref_content">Content</string>
	<string name="pref_content_postsperpage">Posts per page</string>
	<string name="pref_content_postsperpage_desc">Currently %s</string>
	<string name="pref_content_poolsperpage">Pools per page</string>
	<string name="pref_content_poolpostsperpage">Pool posts per page</string>
	<string name="pref_content_localfilter">Local filtering</string>
	<string name="pref_content_localfilter_desc">Good if you want to search for more than two tags with limited accounts</string>
	<string name="pref_content_warning">Content warning</string>
	<string name="pref_content_warning_desc">Displays \'Post blocked\' when accesing a post with a high rating</string>
	<string name="pref_content_showdeletedposts">Show deleted posts</string>
	<string name="pref_content_showflaggedposts">Show flagged posts</string>
	
	<string name="pref_blacklist">Blacklist</string>
	<string name="pref_blacklist_enabled">Enable</string>
	<string name="pref_blacklist_tags">Tags list</string>
	<string name="pref_blacklist_tags_desc">Images of posts containing these tags are not shown</string>
	<string name="pref_blacklist_tags_dialogmsg">Posts with tag combinations you don\'t want to see. Separate combinations on a new line.</string>
	<string name="pref_blacklist_hide">Hide posts from grid</string>
	<string name="pref_blacklist_hide_desc_on">Blacklisted posts are not visible</string>
	<string name="pref_blacklist_hide_desc_off">Blacklisted posts are shown normally</string>
	
	<string name="pref_ratings">Ratings filter</string>
	<string name="pref_ratings_todisplay">Ratings to display</string>
	<string name="pref_ratings_todisplay_desc">Posts with the ratings you want to see</string>
	
	<string name="pref_ratings_todisplay_safe">Safe</string>
	<string name="pref_ratings_todisplay_questionable">Questionable</string>
	<string name="pref_ratings_todisplay_explicit">Explicit</string>
	
	<string name="pref_ratings_hide">Hide posts from grid</string>
	<string name="pref_ratings_hide_desc_on">Filtered posts are not visible</string>
	<string name="pref_ratings_hide_desc_off">Filtered posts are shown normally</string>
	
	<string name="section_posts">Posts</string>
	<string name="section_pools">Pools</string>
	<string name="section_tags">Tags</string>
	<string name="section_artists">Artists</string>
	<string name="section_comments">Comments</string>
	<string name="section_notes">Notes</string>
</resources>