<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
	<!--
	<item
		android:id="@+id/menu_postview_love"
		android:icon="@android:drawable/ic_menu_add" />
	-->
	<item
		android:id="@+id/menu_postview_save"
		android:icon="@android:drawable/ic_menu_save"
		android:showAsAction="always"
		android:title="@string/save" />
	
	<item
		android:id="@+id/menu_postview_details"
		android:icon="@android:drawable/ic_menu_info_details"
		android:showAsAction="always"
		android:title="@string/details" />
	
	<item
		android:id="@+id/menu_postview_browser"
		android:icon="@android:drawable/ic_menu_view"
		android:showAsAction="ifRoom"
		android:title="@string/browser" />
	
	<item
		android:id="@+id/menu_postview_preferences"
		android:icon="@android:drawable/ic_menu_preferences"
		android:showAsAction="never"
		android:title="@string/settings" />
	
	<item
		android:id="@+id/menu_postview_viewparent"
		android:icon="@android:drawable/ic_menu_view"
		android:showAsAction="never"
		android:title="@string/viewparent" />
	
	<item
		android:id="@+id/menu_postview_viewchildren"
		android:icon="@android:drawable/ic_menu_view"
		android:showAsAction="never"
		android:title="@string/viewchildren" />
	
	<item
		android:id="@+id/menu_postview_viewpools"
		android:icon="@android:drawable/ic_menu_view"
		android:showAsAction="never"
		android:title="@string/viewpools" />
	
</menu>